--- a/MyDrawing/MyDrawing.csproj
+++ b/MyDrawing/MyDrawing.csproj
@@ -45,6 +45,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BarChart.cs" />
+    <Compile Include="CircleDiagram.cs" />
     <Compile Include="PointsGraphic.cs" />
     <Compile Include="Diagram.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
