--- a/MyDrawing/MyDrawing.csproj
+++ b/MyDrawing/MyDrawing.csproj
@@ -47,6 +47,8 @@
     <Compile Include="BarChart.cs" />
     <Compile Include="CircleDiagram.cs" />
     <Compile Include="Diagram.cs" />
+    <Compile Include="PointsGraphicDynamic.cs" />
+    <Compile Include="PointsGraphicStatic.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
