--- a/TestMyDrawing/TestMyDrawing.csproj
+++ b/TestMyDrawing/TestMyDrawing.csproj
@@ -58,7 +58,8 @@
     <Compile Include="MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Model\DrawingModel.cs" />
+    <Compile Include="Model\FilesModel.cs" />
+    <Compile Include="Model\GraphicModel.cs" />
     <Compile Include="Presenter\DrawingPresenter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
