--- a/MyDrawing/MyDrawing.csproj
+++ b/MyDrawing/MyDrawing.csproj
@@ -32,6 +32,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MyClassLibrary">
+      <HintPath>..\..\MyClassLibrary\MyClassLibrary\bin\Debug\MyClassLibrary.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
