Р”РёР·Р°Р№РЅ РґР»СЏ РґРѕР±Р°РІР»РµРЅРёСЏ С‚РёРїР° Р»РёРЅРёРё РєСЂРёРІРѕР№

--- a/TestMyDrawing/TestMyDrawing.csproj
+++ b/TestMyDrawing/TestMyDrawing.csproj
@@ -127,6 +127,20 @@
   <ItemGroup>
     <None Include="Resources\new.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\dash.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dashdot.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dashdotdot.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\dot.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\solid.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
