--- a/TestMyDrawing/TestMyDrawing.csproj
+++ b/TestMyDrawing/TestMyDrawing.csproj
@@ -213,6 +213,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icons8_plot.ico" />
+    <None Include="Resources\minimize.png" />
+    <None Include="Resources\normalize.png" />
+    <None Include="Resources\close3.png" />
+    <None Include="Resources\close2.png" />
     <None Include="Resources\close.png" />
     <None Include="Resources\icons8_checkmark_50px_1.png" />
   </ItemGroup>
