--- a/TestMyDrawing/TestMyDrawing.csproj
+++ b/TestMyDrawing/TestMyDrawing.csproj
@@ -213,6 +213,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icons8_plot.ico" />
+    <None Include="Resources\maximize.png" />
+    <None Include="Resources\maximize.bmp" />
     <None Include="Resources\minimize.png" />
     <None Include="Resources\normalize1.png" />
     <None Include="Resources\close4.png" />
