Р”РѕСЂР°Р±РѕС‚РєР° Р»РµРЅС‚С‹

--- a/TestMyDrawing/TestMyDrawing.csproj
+++ b/TestMyDrawing/TestMyDrawing.csproj
@@ -143,21 +143,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\diagramm.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\plot%281%29.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\curve%281%29.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\zoom-in.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Resources\zoom-out.png" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\dash.png" />
   </ItemGroup>
   <ItemGroup>
@@ -195,6 +180,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icons8_plot.ico" />
+    <None Include="Resources\zoom-out.png" />
+    <None Include="Resources\zoom-in.png" />
+    <None Include="Resources\curve%281%29.png" />
+    <None Include="Resources\icons8_edit_graph_report_20px.png" />
     <None Include="Resources\preview.png" />
     <None Include="Resources\print.png" />
     <None Include="Resources\save.png" />
@@ -202,7 +191,6 @@
     <None Include="Resources\folder.png" />
     <None Include="Resources\new.png" />
     <None Include="Resources\maximize.png" />
-    <None Include="Resources\maximize.bmp" />
     <None Include="Resources\minimize.png" />
     <None Include="Resources\normalize1.png" />
     <None Include="Resources\close4.png" />
