--- a/TestMyDrawing/TestMyDrawing.csproj
+++ b/TestMyDrawing/TestMyDrawing.csproj
@@ -93,6 +93,7 @@
     <Compile Include="ElementsOfStrip\ToolsUC.Designer.cs">
       <DependentUpon>ToolsUC.cs</DependentUpon>
     </Compile>
+    <Compile Include="Figure.cs" />
     <Compile Include="GraphicEventArgs.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
